fixed whitespace hack for android fixed line-height for whitespace hack

--- a/src/less/button.less
+++ b/src/less/button.less
@@ -107,6 +107,7 @@
     min-height: @button-height;
     /* 5 */
     font-size: 1rem;
+    vertical-align: top;
     /* 6 */
     padding: 0 @button-padding-horizontal;
     background: @button-background;
@@ -310,7 +311,7 @@
     /* 2 */
     position: relative;
     /* 3 */
-    font-size: 0;
+    font-size: 0.01px;
     /* 4 */
     white-space: nowrap;
 }
