--- a/src/less/dropdown.less
+++ b/src/less/dropdown.less
@@ -87,6 +87,7 @@
     color: @dropdown-color;
     /* 5 */
     font-size: 1rem;
+    vertical-align: top;
     .hook-dropdown;
 }
 
