--- a/src/less/overlay.less
+++ b/src/less/overlay.less
@@ -122,7 +122,7 @@
  * Needed for Firefox
  */
 
-.uk-overlay-area:not(:empty) { font-size: 0; }
+.uk-overlay-area:not(:empty) { font-size: 0.01px; }
 
 /*
  * 1. Needed for vertical alignment
