--- a/src/less/pagination.less
+++ b/src/less/pagination.less
@@ -53,7 +53,7 @@
     /* 2 */
     text-align: center;
     /* 3 */
-    font-size: 0;
+    font-size: 0.01px;
 }
 
 /*
@@ -81,6 +81,7 @@
     display: inline-block;
     /* 1 */
     font-size: 1rem;
+    vertical-align: top;
 }
 
 .uk-pagination > li:nth-child(n+2) { margin-left: @pagination-margin-left; }
