--- a/src/less/subnav.less
+++ b/src/less/subnav.less
@@ -45,7 +45,7 @@
     padding: 0;
     list-style: none;
     /* 2 */
-    font-size: 0;
+    font-size: 0.01px;
 }
 
 
@@ -62,6 +62,7 @@
     position: relative;
     /* 2 */
     font-size: 1rem;
+    vertical-align: top;
 }
 
 .uk-subnav > li,
