--- a/src/less/utility.less
+++ b/src/less/utility.less
@@ -195,7 +195,7 @@
  * Remove whitespace between child elements when using `inline-block`
  */
 
-.uk-vertical-align { font-size: 0; }
+.uk-vertical-align { font-size: 0.01px; }
 
 /*  
  *  The `uk-vertical-align` container needs a specific height
